/**zebra_fpm_dt.c**@copyrightCopyright(C)2016SprouteNetworks,Inc.**@authorAvnees
hSachdev<avneesh@sproute.com>**ThisfileispartofGNUZebra.**GNUZebraisfreesoftware
;youcanredistributeitand/ormodifyit*underthetermsoftheGNUGeneralPublicLicenseasp
ublishedbythe*FreeSoftwareFoundation;eitherversion2,or(atyouroption)any*laterver
sion.**GNUZebraisdistributedinthehopethatitwillbeuseful,but*WITHOUTANYWARRANTY;w
ithouteventheimpliedwarrantyof*MERCHANTABILITYorFITNESSFORAPARTICULARPURPOSE.See
theGNU*GeneralPublicLicenseformoredetails.**YoushouldhavereceivedacopyoftheGNUGe
neralPublicLicensealong*withthisprogram;seethefileCOPYING;ifnot,writetotheFreeSo
ftware*Foundation,Inc.,51FranklinSt,FifthFloor,Boston,MA02110-1301USA*//**Develo
pertestsforthezebracodethatinterfaceswiththe*forwardingplanemanager.**Thefunctio
nsherearebuiltintodeveloperbuildsofzebra(when*DEV_BUILDisdefined),andcanbecalled
viathe'invoke'cli*command.**Forexample:**#invokezebrafunctionzfpm_dt_benchmark_p
rotobuf_encode100000**/#include<zebra.h>#include"log.h"#include"vrf.h"#include"z
ebra/rib.h"#include"zebra/zserv.h"#include"zebra/zebra_vrf.h"#include"zebra_fpm_
private.h"#include"qpb/qpb_allocator.h"#include"qpb/linear_allocator.h"#ifdefHAV
E_PROTOBUF#include"qpb/qpb.h"#include"fpm/fpm.pb-c.h"#endif/**Externs.*/externin
tzfpm_dt_benchmark_netlink_encode(intargc,constchar**argv);externintzfpm_dt_benc
hmark_protobuf_encode(intargc,constchar**argv);externintzfpm_dt_benchmark_protob
uf_decode(intargc,constchar**argv);/**zfpm_dt_find_route**Selectsasuitableribdes
tinationforfpminterfacetests.*/staticintzfpm_dt_find_route(rib_dest_t**dest_p,st
ructroute_entry**re_p){structroute_node*rnode;route_table_iter_titer;structroute
_table*table;rib_dest_t*dest;structroute_entry*re;intret;table=zebra_vrf_table(A
FI_IP,SAFI_UNICAST,VRF_DEFAULT);if(!table)return0;route_table_iter_init(&iter,ta
ble);while((rnode=route_table_iter_next(&iter))){dest=rib_dest_from_rnode(rnode)
;if(!dest)continue;re=zfpm_route_for_update(dest);if(!re)continue;if(re->nexthop
_active_num<=0)continue;*dest_p=dest;*re_p=re;ret=1;gotodone;}ret=0;done:route_t
able_iter_cleanup(&iter);returnret;}#ifdefHAVE_NETLINK/**zfpm_dt_benchmark_netli
nk_encode*/intzfpm_dt_benchmark_netlink_encode(intargc,constchar**argv){inttimes
,i,len;rib_dest_t*dest;structroute_entry*re;charbuf[4096];times=100000;if(argc>0
){times=atoi(argv[0]);}if(!zfpm_dt_find_route(&dest,&re)){return1;}for(i=0;i<tim
es;i++){len=zfpm_netlink_encode_route(RTM_NEWROUTE,dest,re,buf,sizeof(buf));if(l
en<=0){return2;}}return0;}#endif/*HAVE_NETLINK*/#ifdefHAVE_PROTOBUF/**zfpm_dt_be
nchmark_protobuf_encode*/intzfpm_dt_benchmark_protobuf_encode(intargc,constchar*
*argv){inttimes,i,len;rib_dest_t*dest;structroute_entry*re;uint8_tbuf[4096];time
s=100000;if(argc>0){times=atoi(argv[0]);}if(!zfpm_dt_find_route(&dest,&re)){retu
rn1;}for(i=0;i<times;i++){len=zfpm_protobuf_encode_route(dest,re,buf,sizeof(buf)
);if(len<=0){return2;}}return0;}/**zfpm_dt_log_fpm_message*/staticvoidzfpm_dt_lo
g_fpm_message(Fpm__Message*msg){Fpm__AddRoute*add_route;Fpm__Nexthop*nexthop;str
uctprefixprefix;uint8_tfamily,nh_family;uintif_index;char*if_name;size_ti;charbu
f[INET6_ADDRSTRLEN];uniong_addrnh_addr;if(msg->type!=FPM__MESSAGE__TYPE__ADD_ROU
TE)return;zfpm_debug("Addroutemessage");add_route=msg->add_route;if(!qpb_address
_family_get(add_route->address_family,&family))return;if(!qpb_l3_prefix_get(add_
route->key->prefix,family,&prefix))return;zfpm_debug("Vrfid:%d,Prefix:%s/%d,Metr
ic:%d",add_route->vrf_id,inet_ntop(family,&prefix.u.prefix,buf,sizeof(buf)),pref
ix.prefixlen,add_route->metric);/**Goovernexthops.*/for(i=0;i<add_route->n_nexth
ops;i++){nexthop=add_route->nexthops[i];if(!qpb_if_identifier_get(nexthop->if_id
,&if_index,&if_name))continue;if(nexthop->address)qpb_l3_address_get(nexthop->ad
dress,&nh_family,&nh_addr);zfpm_debug("Nexthop-if_index:%d(%s),gateway:%s,",if_i
ndex,if_name?if_name:"namenotspecified",nexthop->address?inet_ntoa(nh_addr.ipv4)
:"None");}}/**zfpm_dt_benchmark_protobuf_decode*/intzfpm_dt_benchmark_protobuf_d
ecode(intargc,constchar**argv){inttimes,i,len;rib_dest_t*dest;structroute_entry*
re;uint8_tmsg_buf[4096];QPB_DECLARE_STACK_ALLOCATOR(allocator,8192);Fpm__Message
*fpm_msg;QPB_INIT_STACK_ALLOCATOR(allocator);times=100000;if(argc>0)times=atoi(a
rgv[0]);if(!zfpm_dt_find_route(&dest,&re))return1;/**Encodetherouteintothemessag
ebufferonceonly.*/len=zfpm_protobuf_encode_route(dest,re,msg_buf,sizeof(msg_buf)
);if(len<=0)return2;//Decodeonce,anddisplaythedecodedmessagefpm_msg=fpm__message
__unpack(&allocator,len,msg_buf);if(fpm_msg){zfpm_dt_log_fpm_message(fpm_msg);QP
B_RESET_STACK_ALLOCATOR(allocator);}/**Decodeencodedmessagethespecifiednumberoft
imes.*/for(i=0;i<times;i++){fpm_msg=fpm__message__unpack(&allocator,len,msg_buf)
;if(!fpm_msg)return3;//fpm__message__free_unpacked(msg,NULL);QPB_RESET_STACK_ALL
OCATOR(allocator);}return0;}#endif/*HAVE_PROTOBUF*/