/**zebra_fpm_protobuf.c**@copyrightCopyright(C)2016SprouteNetworks,Inc.**@author
AvneeshSachdev<avneesh@sproute.com>**ThisfileispartofQuagga.**Quaggaisfreesoftwa
re;youcanredistributeitand/ormodifyit*underthetermsoftheGNUGeneralPublicLicensea
spublishedbythe*FreeSoftwareFoundation;eitherversion2,or(atyouroption)any*laterv
ersion.**Quaggaisdistributedinthehopethatitwillbeuseful,but*WITHOUTANYWARRANTY;w
ithouteventheimpliedwarrantyof*MERCHANTABILITYorFITNESSFORAPARTICULARPURPOSE.See
theGNU*GeneralPublicLicenseformoredetails.**YoushouldhavereceivedacopyoftheGNUGe
neralPublicLicensealong*withthisprogram;seethefileCOPYING;ifnot,writetotheFreeSo
ftware*Foundation,Inc.,51FranklinSt,FifthFloor,Boston,MA02110-1301USA*/#include<
zebra.h>#include"log.h"#include"rib.h"#include"zserv.h"#include"zebra_vrf.h"#inc
lude"qpb/qpb.pb-c.h"#include"qpb/qpb.h"#include"qpb/qpb_allocator.h"#include"qpb
/linear_allocator.h"#include"fpm/fpm_pb.h"#include"zebra_fpm_private.h"/**create
_delete_route_message*/staticFpm__DeleteRoute*create_delete_route_message(qpb_al
locator_t*allocator,rib_dest_t*dest,structroute_entry*re){Fpm__DeleteRoute*msg;m
sg=QPB_ALLOC(allocator,typeof(*msg));if(!msg){assert(0);returnNULL;}fpm__delete_
route__init(msg);msg->vrf_id=zvrf_id(rib_dest_vrf(dest));qpb_address_family_set(
&msg->address_family,rib_dest_af(dest));/**XXXHardcodesubaddressfamilyfornow.*/m
sg->sub_address_family=QPB__SUB_ADDRESS_FAMILY__UNICAST;msg->key=fpm_route_key_c
reate(allocator,rib_dest_prefix(dest));if(!msg->key){assert(0);returnNULL;}retur
nmsg;}/**add_nexthop*/staticinlineintadd_nexthop(qpb_allocator_t*allocator,Fpm__
AddRoute*msg,rib_dest_t*dest,structnexthop*nexthop){uint32_tif_index;uniong_addr
*gateway,*src;gateway=src=NULL;if_index=nexthop->ifindex;if(nexthop->type==NEXTH
OP_TYPE_IPV4||nexthop->type==NEXTHOP_TYPE_IPV4_IFINDEX){gateway=&nexthop->gate;i
f(nexthop->src.ipv4.s_addr)src=&nexthop->src;}if(nexthop->type==NEXTHOP_TYPE_IPV
6||nexthop->type==NEXTHOP_TYPE_IPV6_IFINDEX){gateway=&nexthop->gate;}if(nexthop-
>type==NEXTHOP_TYPE_IFINDEX){if(nexthop->src.ipv4.s_addr)src=&nexthop->src;}if(!
gateway&&if_index==0)return0;/**Wehaveavalidnexthop.*/{Fpm__Nexthop*pb_nh;pb_nh=
QPB_ALLOC(allocator,typeof(*pb_nh));if(!pb_nh){assert(0);return0;}fpm__nexthop__
init(pb_nh);if(if_index!=0){pb_nh->if_id=qpb_if_identifier_create(allocator,if_i
ndex);}if(gateway){pb_nh->address=qpb_l3_address_create(allocator,gateway,rib_de
st_af(dest));}msg->nexthops[msg->n_nexthops++]=pb_nh;}//TODO:Usesrc.return1;}/**
create_add_route_message*/staticFpm__AddRoute*create_add_route_message(qpb_alloc
ator_t*allocator,rib_dest_t*dest,structroute_entry*re){Fpm__AddRoute*msg;structn
exthop*nexthop;uintnum_nhs,u;structnexthop*nexthops[MULTIPATH_NUM];msg=QPB_ALLOC
(allocator,typeof(*msg));if(!msg){assert(0);returnNULL;}fpm__add_route__init(msg
);msg->vrf_id=zvrf_id(rib_dest_vrf(dest));qpb_address_family_set(&msg->address_f
amily,rib_dest_af(dest));/**XXXHardcodesubaddressfamilyfornow.*/msg->sub_address
_family=QPB__SUB_ADDRESS_FAMILY__UNICAST;msg->key=fpm_route_key_create(allocator
,rib_dest_prefix(dest));qpb_protocol_set(&msg->protocol,re->type);msg->has_route
_type=1;msg->route_type=FPM__ROUTE_TYPE__NORMAL;msg->metric=re->metric;/**Figure
outthesetofnexthopstobeaddedtothemessage.*/num_nhs=0;for(ALL_NEXTHOPS(re->ng,nex
thop)){if(num_nhs>=multipath_num)break;if(num_nhs>=ZEBRA_NUM_OF(nexthops))break;
if(nexthop->type==NEXTHOP_TYPE_BLACKHOLE){switch(nexthop->bh_type){caseBLACKHOLE
_REJECT:msg->route_type=FPM__ROUTE_TYPE__UNREACHABLE;break;caseBLACKHOLE_NULL:de
fault:msg->route_type=FPM__ROUTE_TYPE__BLACKHOLE;break;}returnmsg;}if(CHECK_FLAG
(nexthop->flags,NEXTHOP_FLAG_RECURSIVE))continue;if(!CHECK_FLAG(nexthop->flags,N
EXTHOP_FLAG_ACTIVE))continue;nexthops[num_nhs]=nexthop;num_nhs++;}if(!num_nhs){z
fpm_debug("netlink_encode_route():Nousefulnexthop.");assert(0);returnNULL;}/**An
daddthemtothemessage.*/if(!(msg->nexthops=qpb_alloc_ptr_array(allocator,num_nhs)
)){assert(0);returnNULL;}msg->n_nexthops=0;for(u=0;u<num_nhs;u++){if(!add_nextho
p(allocator,msg,dest,nexthops[u])){assert(0);returnNULL;}}assert(msg->n_nexthops
==num_nhs);returnmsg;}/**create_route_message*/staticFpm__Message*create_route_m
essage(qpb_allocator_t*allocator,rib_dest_t*dest,structroute_entry*re){Fpm__Mess
age*msg;msg=QPB_ALLOC(allocator,typeof(*msg));if(!msg){assert(0);returnNULL;}fpm
__message__init(msg);if(!re){msg->has_type=1;msg->type=FPM__MESSAGE__TYPE__DELET
E_ROUTE;msg->delete_route=create_delete_route_message(allocator,dest,re);if(!msg
->delete_route){assert(0);returnNULL;}returnmsg;}msg->has_type=1;msg->type=FPM__
MESSAGE__TYPE__ADD_ROUTE;msg->add_route=create_add_route_message(allocator,dest,
re);if(!msg->add_route){assert(0);returnNULL;}returnmsg;}/**zfpm_protobuf_encode
_route**Createaprotobufmessagecorrespondingtothegivenrouteinthe*givenbufferspace
.**Returnsthenumberofbyteswrittentothebuffer.0oranegative*valueindicatesanerror.
*/intzfpm_protobuf_encode_route(rib_dest_t*dest,structroute_entry*re,uint8_t*in_
buf,size_tin_buf_len){Fpm__Message*msg;QPB_DECLARE_STACK_ALLOCATOR(allocator,409
6);size_tlen;QPB_INIT_STACK_ALLOCATOR(allocator);msg=create_route_message(&alloc
ator,dest,re);if(!msg){assert(0);return0;}len=fpm__message__pack(msg,(uint8_t*)i
n_buf);assert(len<=in_buf_len);QPB_RESET_STACK_ALLOCATOR(allocator);returnlen;}